# ssvm-evmc

lib/: eeifunc.cpp
test/evmc/: evmcTest.cpp
test/soll-runtime-test/: .gdb_history  evmc.py  evmcTest.cpp  libyul  soll-runtime-test.ipynb  soll_runtime_test.cpp  soll_runtime_test.py  test-erc20.py  test-sstore.py  yul
test/soll-runtime-test.bak/: .gdb_history  CMakeLists.txt  Makefile  Untitled.ipynb  a.cc  a.out  evmc.py  evmcTest.cpp  evmcTest2  evmcTest2.cpp  evmc_all.py  peda-session-python3.8.txt  run.py  soll-runtime-test.ipynb
test/soll-runtime-test/.ipynb_checkpoints/: soll-runtime-test-checkpoint.ipynb
test/soll-runtime-test/wasm/: basic_sstore.wasm  basic_sstore.yul  comparison_lt.wasm
